Style: Finalized Projects section

--- a/index.html
+++ b/index.html
@@ -150,104 +150,136 @@
             <div class="section-content-wrapper">
                 <!-- Project -->
                 <div id="project" class="project">
-                    <div id="previewImages" class="project-preview-images-wrapper">
-                        <div class="preview-image preview-image-1"></div>
-                        <div class="preview-image preview-image-2"></div>
-                        <div class="preview-image preview-image-3"></div>
+                    <a href="/pages/webb-telescope.html" target="_blank" rel="noopener no-referrer">
+                        <div id="previewImages" class="project-preview-images-wrapper">
+                            <div class="preview-image preview-image-1">
+                            <img src="/assets/projectImages/webbTelescope/finalResult1.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-2">
+                            <img src="/assets/projectImages/webbTelescope/finalResult2.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-3">
+                            <img src="/assets/projectImages/webbTelescope/finalResult3.webp" alt="Preview image" loading="lazy">
+                            </div>
+                        </a>
                     </div>
-                    <div class="project-text-container">
-                        <h3 class="project-title">
-                            <a class="project-link" href="/pages/webb-telescope.html">
-                            James Webb Telescope: UI Redesign
-                            </a>
-                        </h3>
-                        <p class="project-description">This project is still ongoing.</p>
-                    </div>
-                    <div class="launch-project-button">
-                        <p class="button-text"><a href="https://webbtelescope.org/home" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
+                    <div class="project-inner-wrapper">
+                        <div class="project-text-container">
+                            <h3 class="project-title">
+                                <a class="project-link" href="/pages/webb-telescope.html" target="_blank">
+                                James Webb Telescope: UI Redesign
+                                </a>
+                            </h3>
+                            <p class="project-description">Redesigned the Webb Telescope's website as part of Langara College's Web and Mobile App Design and Development (WMDD) program.</p>
+                        </div>
+                        <a href="https://webbtelescope.org/home" target="_blank" rel="noopener no-referrer">
+                            <div class="launch-project-button">
+                                <p class="button-text">Launch Site</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <!-- End of Project -->
 
                 <!-- Project -->
                 <div id="project" class="project">
-                    <div id="previewImages" class="project-preview-images-wrapper">
-                        <div class="preview-image preview-image-1"></div>
-                        <div class="preview-image preview-image-2"></div>
-                        <div class="preview-image preview-image-3"></div>
+                    <a href="/pages/opeth.html" target="_blank" rel="noopener no-referrer">
+                        <div id="previewImages" class="project-preview-images-wrapper">
+                            <div class="preview-image preview-image-1">
+                            <img src="/assets/projectImages/opeth/finalResult1.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-2">
+                            <img src="/assets/projectImages/opeth/finalResult2.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-3">
+                            <img src="/assets/projectImages/opeth/finalResult3.webp" alt="Preview image" loading="lazy">
+                            </div>
+                        </a>
                     </div>
-                    <div class="project-text-container">
-                        <h3 class="project-title">
-                            <a class="project-link" href="/pages/opeth.html">
-                            Opeth: UI Redesign
-                            </a>
-                        </h3>
-                        <p class="project-description">This project is still ongoing.</p>
-                    </div>
-                    <div class="launch-project-button">
-                        <p class="button-text"><a href="https://www.opeth.com/ target="_blank" rel="noopener no-referrer">Launch Site</a></p>
+                    <div class="project-inner-wrapper">
+                        <div class="project-text-container">
+                            <h3 class="project-title">
+                                <a class="project-link" href="/pages/webb-telescope.html" target="_blank">
+                                Opeth Band: UI Redesign
+                                </a>
+                            </h3>
+                            <p class="project-description">Revamped Opeth band's website through Langara College's Web and Mobile App Design and Development (WMDD) program.</p>
+                        </div>
+                        <a href="https://opeth.com" target="_blank" rel="noopener no-referrer">
+                            <div class="launch-project-button">
+                                <p class="button-text">Launch Site</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <!-- End of Project -->
 
                 <!-- Project -->
-                <div class="project">
-                    <div class="project-preview-images-wrapper previe">
-                        <div class="preview-image preview-image-1"></div>
-                        <div class="preview-image preview-image-2"></div>
-                        <div class="preview-image preview-image-3"></div>
-                    </div>
-                    <div class="project-text-container">
-                        <h3 class="project-title">
-                            <a class="project-link" href="/pages/langara-project.html">
-                            Learnium
-                            </a>
-                        </h3>
-                        <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ipsa!</p>
-                    </div>
-                    <div class="launch-project-button">
-                        <p class="button-text"><a href="https://learnium.app" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
-                    </div>
-                </div>
-
-                    <!-- Project -->
-                    <div id="project" class="project">
+                <div id="project" class="project">
+                    <a href="/pages/learnium.html" target="_blank" rel="noopener no-referrer">
                         <div id="previewImages" class="project-preview-images-wrapper">
-                            <div class="preview-image preview-image-1"></div>
-                            <div class="preview-image preview-image-2"></div>
-                            <div class="preview-image preview-image-3"></div>
-                        </div>
+                            <div class="preview-image preview-image-1">
+                            <img src="/assets/projectImages/opeth/finalResult1.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-2">
+                            <img src="/assets/projectImages/opeth/finalResult2.webp" alt="Preview image" loading="lazy">
+                            </div>
+                            <div class="preview-image preview-image-3">
+                            <img src="/assets/projectImages/opeth/finalResult3.webp" alt="Preview image" loading="lazy">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="project-inner-wrapper">
                         <div class="project-text-container">
                             <h3 class="project-title">
-                                <a class="project-link" href="/pages/prolosa-project.html">
-                                Plásticos Prolosa - Website Overhaul
+                                <a class="project-link" href="/pages/learnium.html" target="_blank">
+                                Learnium: Learning App
                                 </a>
                             </h3>
-                            <p class="project-description">This project is still ongoing.</p>
+                            <p class="project-description">In a collaborative team effort with 4 designers and 4 developers at Langara, I contributed to crafting an app that transforms text into interactive study sessions</p>
                         </div>
-                        <div class="launch-project-button">
-                            <p class="button-text"><a href="https://plasticosprolosa.com/" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
-                        </div>
+                        <a href="https://learnium.app" target="_blank" rel="noopener no-referrer">
+                            <div class="launch-project-button">
+                                <p class="button-text">Launch Site</p>
+                            </div>
+                        </a>
                     </div>
+                </div>
+                <!-- End of Project -->
+
+                    <!-- Project -->
+                    <!-- Plasticos Prolosa -->
                     <!-- End of Project -->
                     
                     <!-- Project -->
-                    <div class="project">
-                        <div class="project-preview-images-wrapper previe">
-                            <div class="preview-image preview-image-1"></div>
-                            <div class="preview-image preview-image-2"></div>
-                            <div class="preview-image preview-image-3"></div>
+                    <div id="project" class="project">
+                        <a href="/pages/langara-project.html" target="_blank" rel="noopener no-referrer">
+                            <div id="previewImages" class="project-preview-images-wrapper">
+                                <div class="preview-image preview-image-1">
+                                <img src="/assets/projectImages/langara-app/finalResult3.webp" alt="Preview image" loading="lazy">
+                                </div>
+                                <div class="preview-image preview-image-2">
+                                <img src="/assets/projectImages/langara-app/finalResult2.webp" alt="Preview image" loading="lazy">
+                                </div>
+                                <div class="preview-image preview-image-3">
+                                <img src="/assets/projectImages/langara-app/finalResult1.webp" alt="Preview image" loading="lazy">
+                                </div>
+                            </a>
                         </div>
-                        <div class="project-text-container">
-                            <h3 class="project-title">
-                                <a class="project-link" href="/pages/langara-project.html">
-                                Langara College's Website Redesign
-                                </a>
-                            </h3>
-                            <p class="project-description">This project is still ongoing.</p>
-                        </div>
-                        <div class="launch-project-button">
-                            <p class="button-text"><a href="https://langara-app.ca/" target="_blank" rel="noopener no-referrer">Launch Site</a></p>
+                        <div class="project-inner-wrapper">
+                            <div class="project-text-container">
+                                <h3 class="project-title">
+                                    <a class="project-link" href="/pages/langara-project.html" target="_blank">
+                                    Langara's Website: UI Redesign
+                                    </a>
+                                </h3>
+                                <p class="project-description">As the UI designer, I contributed to renewing Langara's WMDD program website, focusing on an intuitive and visually appealing interface aligned with program directives.</p>
+                            </div>
+                            <a href="https://langara-app.ca" target="_blank" rel="noopener no-referrer">
+                                <div class="launch-project-button">
+                                    <p class="button-text">Launch Site</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <!-- End of Project -->
