Style: Updated Project single page

--- a/pages/webb-telescope.html
+++ b/pages/webb-telescope.html
@@ -57,31 +57,37 @@
 
     <main class="main-section">
         <div class="main-wrapper">
-            <div class="overview">
-                <h2>Overview</h2>
-                <div class="overview-wrapper">
-                    <ul>
-                        <li><a href="#background">Background</a></li>
-                        <li><a href="#problem">Problem</a></li>
-                        <li><a href="#goals">Project Goals</a></li>
-                        <li><a href="#solution">Solution</a></li>
-                        <li><a href="#challenges">Challenges</a></li>
-                        <li><a href="#takeAways">Take-aways</a></li>
-                    </ul>
-                </div>
-                <div class="overview-wrapper">
-                    <h3>Role</h3>
-                    <p>UI/UX Designer</p>
-                </div>
-                <div class="overview-wrapper">
-                    <h3>Timeline</h3>
-                    <p>3 weeks - 25 hours</p>
-                </div>
-                <div class="overview-wrapper">
-                    <h3>Tools</h3>
-                    <p>Figma</p>
+
+            <!-- OVERVIEW -->
+            <div class="overview-bar">
+                <div class="overview">
+                    <h2>Overview</h2>
+                    <div class="overview-inner-group">
+                        <div class="overview-wrapper">
+                            <h3>Role</h3>
+                            <p>UI/UX Designer</p>
+                        </div>
+                        <div class="overview-wrapper">
+                            <h3>Timeline</h3>
+                            <p>3 weeks - 25 hours</p>
+                        </div>
+                        <div class="overview-wrapper">
+                            <h3>Tools</h3>
+                            <p>Figma</p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="overview-stages">
+                <ul class="overview-list">
+                    <li><a href="#background">Background</a></li>
+                    <li><a href="#problem">Problem</a></li>
+                    <li><a href="#goals">Project Goals</a></li>
+                    <li><a href="#solution">Solution</a></li>
+                    <li><a href="#takeAways">Take-aways</a></li>
+                </ul>
+            </div>
+            <!-- END OF OVERVIEW -->
 
             <div class="project-content">
                 <div id="background" class="project-content-wrapper">
@@ -108,14 +114,8 @@
                     <p class="solution-part">Part I: Understanding the current site.</p>
                     <img src="../assets/projectImages/webbTelescope/part-one.png" alt="">
 
-                    <div id="challenges" class="project-content-wrapper">
-                        <h3>Challenges</h3>
-                        <p>Quos amet itaque velit vitae, iusto maxime mollitia accusamus libero expedita perspiciatis unde excepturi tempora ab! Voluptas blanditiis facere voluptatibus?</p>
-                    </div>
-
                     <p class="solution-part">Part II: New vision for the site.</p>
                     <img src="../assets/projectImages/webbTelescope/part-two.png" alt="">
-
                 </div>
                 
                 <div id="takeAways" class="project-content-wrapper">
@@ -123,6 +123,12 @@
                     <p>The importance of developing a unique and consistent concept became evident throughout the project. By exploring various ideas and implementing them consistently across the website, a truly distinctive and modernized product emerged. The project underscored the significance of idea exploration in the design process, resulting in a website that now effectively showcases the advanced technology embodied by the Webb Telescope.</p>
                 </div>
             </div>
+            <a href="/pages/opeth.html">
+                <div class="next-project">
+                    <p>Next Project</p>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </a>
         </div>
 
         <!-- Lift Off Section -->
