JS: Added the js to the project file.

--- a/pages/webb-telescope.html
+++ b/pages/webb-telescope.html
@@ -18,9 +18,10 @@
 <body class="project-body">
     <!-- Room Tone -->
     <audio id="roomTone" loop autoplay>
-        <source src="../assets/soundFx/spaceVoidLoop.wav" type="audio/wav">
+        <source src="../assets/soundFx/floatingInSpaceLoop.wav" type="audio/wav">
         Audio
     </audio>
+    <audio class="bleep-audio" id="bleepSound" src="/assets/soundFx/gameBleep.wav"></audio>
     <!-- End of Room Tone -->
 
     <!-- Starship -->
@@ -42,7 +43,7 @@
 
         <ul>
             <li><a href="about-me.html">+ About Me</a></li>
-            <li><a href="projects.html">+ Projects</a></li>
+            <li><a href="">+ Projects</a></li>
         </ul>
     </nav>
     <!-- End of Navigation bar -->
@@ -162,7 +163,7 @@
                 <div class="active-stage-container">
                     <div class="prev-next-stage">
                         <i class="fa-solid fa-chevron-left"></i>
-                        <p class="stage-title">Descending</p>
+                        <p class="stage-title">UI/UX</p>
                         <i class="fa-solid fa-chevron-right"></i>
                     </div>
                     <div class="progress">
@@ -176,10 +177,6 @@
                 </a>
                 <a href="https://github.com/PaliTriesToDesign" target="_blank">
                     <i class="fa-brands fa-github"></i>
-                </a>
-                <a href="https://twitter.com/PT2DS" target="_blank">
-                    <i class="fa-brands fa-twitter"></i>
-                    <!-- X icon not working -->
                 </a>
                 <!-- <ul class="stages-list">
                     <li><a href="#lift-off">Lift Off!</a></li>
