Style: Updated progress bar, removed arrow and dashed lines

--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
             <div id="soundIcon" class="element">
                 <i class="fa-solid fa-volume-high"></i>
             </div>
-            <div class="element">
+            <!-- <div class="element">
                 <a href="#contactMe"><i class="fa-solid fa-arrow-up"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- End Of Progress Bar -->
