--- a/pages/opeth.html
+++ b/pages/opeth.html
@@ -30,7 +30,7 @@
 
         <ul>
             <li><a href="about-me.html">+ About Me</a></li>
-            <li><a href="#">+ Projects</a></li>
+            <li><a href="">+ Projects</a></li>
         </ul>
     </nav>
 
