--- a/pages/webb-telescope.html
+++ b/pages/webb-telescope.html
@@ -193,9 +193,9 @@
             <div id="soundIcon" class="element">
                 <i class="fa-solid fa-volume-high"></i>
             </div>
-            <div class="element">
+            <!-- <div class="element">
                 <a href="#projectTitle"><i class="fa-solid fa-arrow-up"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- End Of Progress Bar -->
