Content: Added Opeth Project

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="project-inner-wrapper">
                         <div class="project-text-container">
                             <h3 class="project-title">
-                                <a class="project-link" href="/pages/webb-telescope.html" target="_blank">
+                                <a class="project-link" href="/pages/opeth.html" target="_blank">
                                 Opeth Band: UI Redesign
                                 </a>
                             </h3>
